--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,5 @@
 nav {
-  background: #4056a1;
+  background: #1452c5;
   height: 5em;
   display: flex;
   justify-content: space-between;
@@ -14,4 +14,43 @@ nav {
 }
 nav span {
   font-family: "Bungee", cursive;
+}
+
+nav .wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+nav .wrapper i {
+  font-size: 1.5em;
+  cursor: pointer;
+  color: red;
+  -webkit-animation: slide-bottom 1.4s ease-out infinite both;
+        animation: slide-bottom 1.4s ease-out infinite both;
+}
+
+
+@-webkit-keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+          
+  }
+  100% {
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+          
+  }
+}
+@keyframes slide-bottom {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+            opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
+            opacity: 1;
+  }
 }
