application user image changable with tweet user

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -15,7 +15,9 @@ nav {
 nav span {
   font-family: "Bungee", cursive;
 }
-
+#logo{
+  position: relative;
+}
 nav .wrapper{
   display: flex;
   flex-direction: column;
