--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -55,9 +55,12 @@ body {
   }
   .topHeader{
     position: fixed;
+    border-radius: 20px;
+    text-align: center;
   }
   .container{
     position: absolute;
+  
     
     right: 0;
     width: 50%;
